@@ -1,5 +1,7 @@
 2.0.0b1
  - fix: computing statistics not working (str vs Path)
+ - fix: disallow exporting the event index to .rtdc
+   (it would be re-enumerated and this be confusing) 
 2.0.0a27
  - feat: add developer mode
  - feat: display images on hover in polygon window in QuickView
